@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add shakeLineBuffering, defaulting to True
     Improve the performance of profiling
     Documentation and corrections improvements
     Eliminate StepKey from the profiling output
